# ouija

./: .gitignore  .review-submit-source.json  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  mise.toml  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs/: codex-cli.md  workflows.md
docs/plans/: 2026-04-13-cli-wrapper-design.md  2026-04-13-cli-wrapper-plan.md
examples/: README.md
hooks/: hooks.json
mise/tasks/: release  release-stable  test  use-local  use-published
opencode-plugin/: ouija.ts
scripts/: block-interactive-prompts.sh  check-pending-replies.sh  clear-injection-marker.sh  ouija-prompt-submit.sh  ouija-register.sh  ouija-statusline.sh  ouija-tool-activity.sh  ouija-unregister.sh  post-compact.sh  session-diff.sh
scripts/codex/: codex-prompt-submit.sh  codex-register.sh  codex-stop.sh
skill/: SKILL.md
skill/ouija-peer/: SKILL.md
skills/ouija/: SKILL.md
skills/ouija-peer-trust/: SKILL.md
src/: admin.rs  api.rs  config.rs  daemon_protocol.rs  hooks.rs  main.rs  mcp.rs  nostr_transport.rs  persistence.rs  project_index.rs  protocol.rs  router.rs  scheduler.rs  server.rs  session_agent.rs  state.rs  tmux.rs  tmux_var.rs  transport.rs  workflow.rs
src/backend/: claude_code.rs  codex.rs  mod.rs  opencode.rs
tests/: mise_tasks.rs
tests/e2e/: Dockerfile  Dockerfile.install  Dockerfile.nostr  Dockerfile.opencode  docker-compose.opencode.yml  lib.sh  run-e2e.sh  run-install-tests.sh  run-nostr-tests.sh  run-opencode-tests.sh  run-tests.sh
tests/model/: main.rs
(+2 files in other folders)
